--- a/Firebase.PerformanceMonitoring/samples/PerformanceMonitoringSample/PerformanceMonitoringSample/Main.storyboard
+++ b/Firebase.PerformanceMonitoring/samples/PerformanceMonitoringSample/PerformanceMonitoringSample/Main.storyboard
@@ -6,10 +6,11 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Menu Table View Controller-->
+        <!--Title-->
         <scene sceneID="eS9-nl-JzT">
             <objects>
                 <tableViewController id="ju2-2K-6gc" customClass="MenuTableViewController" sceneMemberID="viewController">
@@ -44,11 +45,79 @@
                             <outlet property="delegate" destination="ju2-2K-6gc" id="bj2-Wk-QFk"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="YMa-mQ-noc"/>
+                    <navigationItem key="navigationItem" title="Title" id="u05-fs-SqH">
+                        <barButtonItem key="rightBarButtonItem" image="settings" id="s7i-WC-TnC">
+                            <connections>
+                                <segue destination="NJa-6R-Qsz" kind="presentation" id="43I-C3-kk0"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tM3-iA-p1v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="343.19999999999999" y="262.21890000000002"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="0Nl-zf-IDT">
+            <objects>
+                <tableViewController id="Hmc-Mz-TP6" customClass="SettingsTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="L0N-zT-zBN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingTableViewCell" id="ZS7-kl-DJh" customClass="SettingTableViewCell">
+                                <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZS7-kl-DJh" id="5ar-YN-g24">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gk2-EF-z03">
+                                            <rect key="frame" x="318" y="7" width="51" height="31"/>
+                                        </switch>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Setting" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ewx-C0-P5s">
+                                            <rect key="frame" x="8" y="12" width="302" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="gk2-EF-z03" firstAttribute="leading" secondItem="ewx-C0-P5s" secondAttribute="trailing" constant="8" id="5rd-Sb-C5K"/>
+                                        <constraint firstItem="ewx-C0-P5s" firstAttribute="centerY" secondItem="5ar-YN-g24" secondAttribute="centerY" id="PgO-E6-DfJ"/>
+                                        <constraint firstItem="gk2-EF-z03" firstAttribute="centerY" secondItem="5ar-YN-g24" secondAttribute="centerY" id="Z0h-Iv-zdP"/>
+                                        <constraint firstAttribute="trailing" secondItem="gk2-EF-z03" secondAttribute="trailing" constant="8" id="nA2-pQ-uOd"/>
+                                        <constraint firstItem="ewx-C0-P5s" firstAttribute="leading" secondItem="5ar-YN-g24" secondAttribute="leadingMargin" id="nr7-rL-ThZ"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="LblSetting" destination="ewx-C0-P5s" id="name-outlet-ewx-C0-P5s"/>
+                                    <outlet property="SwtEnabled" destination="gk2-EF-z03" id="name-outlet-gk2-EF-z03"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Hmc-Mz-TP6" id="DBB-n1-PT0"/>
+                            <outlet property="delegate" destination="Hmc-Mz-TP6" id="7LR-ZC-a1n"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Settings" id="mn6-Mt-nSJ">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="Bxl-HD-sD3">
+                            <connections>
+                                <action selector="BtnCancel_Tapped:" destination="Hmc-Mz-TP6" id="918"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Fetch" style="done" id="Nvc-K6-Aiv">
+                            <connections>
+                                <action selector="BtnFetch_Tapped:" destination="Hmc-Mz-TP6" id="920"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="knu-FA-F3X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1062" y="937"/>
         </scene>
         <!--Title-->
         <scene sceneID="PXN-IS-w9h">
@@ -123,5 +192,34 @@
             </objects>
             <point key="canvasLocation" x="-366" y="262"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xOi-Um-Mno">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NJa-6R-Qsz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Zik-dy-NEN">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.141149044" green="0.65026277300000002" blue="0.91229975220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Hmc-Mz-TP6" kind="relationship" relationship="rootViewController" id="yJy-z5-Ewy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rYg-JD-gFM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="342.39999999999998" y="937.33140000000003"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="settings" width="32" height="32"/>
+    </resources>
 </document>
