--- a/Firebase.Invites/samples/InvitesSample/InvitesSample/Main.storyboard
+++ b/Firebase.Invites/samples/InvitesSample/InvitesSample/Main.storyboard
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ub2-vJ-hhX">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ub2-vJ-hhX">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -10,68 +14,75 @@
             <objects>
                 <navigationController id="Ub2-vJ-hhX" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2b1-Ia-UQ8">
-                        <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.0" green="0.52156862749999999" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.0" green="0.52156862749999999" blue="0.8862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <offsetWrapper key="textShadowOffset" horizontal="0.0" vertical="0.0"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
                     </navigationBar>
                     <connections>
-                        <segue id="86" destination="21" kind="relationship" relationship="rootViewController"/>
+                        <segue destination="21" kind="relationship" relationship="rootViewController" id="86"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="noe-eM-hBG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-442" y="429"/>
         </scene>
-        <!--Sign In View Controller-->
+        <!--Firebase Invites-->
         <scene sceneID="20">
             <objects>
-                <viewController id="21" sceneMemberID="viewController" customClass="SignInViewController">
+                <viewController id="21" customClass="SignInViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="18"/>
                         <viewControllerLayoutGuide type="bottom" id="19"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="22">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <subviews>
-                            <view contentMode="scaleToFill" id="25" translatesAutoresizingMaskIntoConstraints="NO" customClass="GIDSignInButton">
-                                <rect key="frame" x="240" y="285" width="120" height="30"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="25" customClass="GIDSignInButton">
+                                <rect key="frame" x="100" y="269" width="120" height="30"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <constraints>
-                                    <constraint id="28" firstItem="25" firstAttribute="width" constant="120"/>
-                                    <constraint id="29" firstItem="25" firstAttribute="height" constant="30"/>
+                                    <constraint firstAttribute="width" constant="120" id="28"/>
+                                    <constraint firstAttribute="height" constant="30" id="29"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" lineBreakMode="tailTruncation" minimumFontSize="10" id="97" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES" numberOfLines="3" text="Before a user can send Invites,&#xA;the user must be signed in&#xA;with their Google Account." textAlignment="center">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="97">
                                 <rect key="frame" x="128" y="197" width="345" height="80"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="105"/>
+                                </constraints>
+                                <string key="text">Before a user can send Invites,
+the user must be signed in
+with their Google Account.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
-                                <constraints>
-                                    <constraint id="105" firstItem="97" firstAttribute="height" constant="80"/>
-                                </constraints>
                             </label>
                         </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint id="26" firstItem="25" firstAttribute="centerX" secondItem="22" secondAttribute="centerX"/>
-                            <constraint id="27" firstItem="25" firstAttribute="centerY" secondItem="22" secondAttribute="centerY"/>
-                            <constraint id="98" firstItem="25" firstAttribute="top" secondItem="97" secondAttribute="bottom" constant="8"/>
-                            <constraint id="99" firstItem="97" firstAttribute="leading" secondItem="22" secondAttribute="leading"/>
-                            <constraint id="100" firstItem="22" firstAttribute="trailing" secondItem="97" secondAttribute="trailing"/>
-                            <constraint id="101" firstItem="97" firstAttribute="centerX" secondItem="22" secondAttribute="centerX"/>
-                            <constraint id="102" firstItem="97" firstAttribute="centerX" secondItem="22" secondAttribute="centerX"/>
+                            <constraint firstItem="25" firstAttribute="centerX" secondItem="22" secondAttribute="centerX" id="26"/>
+                            <constraint firstItem="25" firstAttribute="centerY" secondItem="22" secondAttribute="centerY" id="27"/>
+                            <constraint firstItem="25" firstAttribute="top" secondItem="97" secondAttribute="bottom" constant="8" id="98"/>
+                            <constraint firstItem="97" firstAttribute="leading" secondItem="22" secondAttribute="leading" id="99"/>
+                            <constraint firstAttribute="trailing" secondItem="97" secondAttribute="trailing" id="100"/>
+                            <constraint firstItem="97" firstAttribute="centerX" secondItem="22" secondAttribute="centerX" id="101"/>
+                            <constraint firstItem="97" firstAttribute="centerX" secondItem="22" secondAttribute="centerX" id="102"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Firebase Invites" id="85"/>
                     <connections>
                         <outlet property="BtnSignIn" destination="25" id="name-outlet-25"/>
                     </connections>
-                    <navigationItem title="Firebase Invites" id="85" key="navigationItem"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="23" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
